--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ShopPlan</string>
+    <string name="shop_plan_form">ShopPlan Form</string>
+    <string name="add_new_item">Add new item</string>
+    <string name="empty_main_item_text">Your list is empty</string>
+    <string name="click_button_below">Click button below to add new item</string>
 </resources>
